--- a/app/views/admin/articles/edit.html.slim
+++ b/app/views/admin/articles/edit.html.slim
@@ -19,9 +19,8 @@
 
       = simple_form_for @article, url: admin_article_path(@article.uuid) do |f|
         .box-body
-          
+          = f.error_notification
           = f.input :state, collect: Article.states_i18n.invert, include_blank: false
-
           = f.input :published_at, as: :date_time_picker
           = f.input :title
           = f.input :slug
@@ -30,6 +29,8 @@
             = image_tag @article.eye_catch_url(:thumb), class: 'img-thumbnail'
             br
             br
+          = f.input :eyecatch_width, placeholder: '100'
+          = f.input_field :eyecatch_position, as: :radio_buttons
           = f.input :description, input_html: { class: 'js-autosize' }
           = f.input :author_id, as: :select2, collection: Author.pluck(:name, :id)
           = f.input :category_id, as: :select2, collection: Category.pluck(:name, :id)
