--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,5 @@
+
+@import 'swiper/swiper-bundle';
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -76,4 +78,10 @@
     width: 100% !important;
     height: 100% !important;
   }
+}
+
+.swiper-container {
+  text-align : center;
+  width: 100%;
+  height: 300px;
 }
